--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,13 +21,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DangNhapDangKy.DangNhapActivity" />
+        <activity android:name=".DangNhap.DangNhapActivity" />
         <activity android:name=".ManHinhChinhActivity" />
         <activity
             android:name=".NguoiDungActivity.NguoiDungActivity"
-            android:label="@string/title_activity_nguoi_dung"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".TheLoaiSach.TheLoaiSachActivity"></activity>
+            android:label="@string/title_activity_nguoi_dung" />
+        <activity android:name=".TheLoaiSach.TheLoaiSachActivity" />
+        <activity android:name=".Sach.SachActivity" />
+        <activity android:name=".HoaDon.HoaDonActivity" />
+        <activity android:name=".BanChay.BanChayActivity" />
+        <activity android:name=".ThongKeActivity" />
+        <activity android:name=".TheLoaiSach.DanhSachTheLoaiActivity" />
+        <activity android:name=".Sach.DanhSachSachActivity" />
+        <activity android:name=".HoaDon.DanhSachHoaDonActivity"></activity>
     </application>
 
 </manifest>
